--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@ PORT="3000"
 DB_USERNAME = "ulviea"
 DB_PASSWORD = "RfC4880shS4erH9E"
 SESSION_SECRET = "ulvi2002"
+MAIL_USER="agazadeulvi02@gmail.com"
+MAIL_PASS="fkwn bnqx idsp hnld"
