--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.1",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
@@ -34,8 +35,10 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "mongoose": "^8.8.3",
+    "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^11.0.3"
   }
 }
