--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.3",
     "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.16",
