--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "ts-node": "^10.9.2",
     "uuid": "^11.0.3"
   }
 }
