--- a/client/package.json
+++ b/client/package.json
@@ -28,9 +28,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.454.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-phone-number-input": "^3.4.9",
