--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT="3000"
-
+BASE_URL="http://localhost:3000"
 DB_USERNAME = "ulviea"
 DB_PASSWORD = "RfC4880shS4erH9E"
 SESSION_SECRET = "ulvi2002"
