--- a/client/package.json
+++ b/client/package.json
@@ -29,17 +29,20 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.454.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-phone-number-input": "^3.4.9",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.15.0",
     "sonner": "^1.7.1",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
