--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.454.0",
+    "moment": "^2.30.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.53.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-phone-number-input": "^3.4.9",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "react-spinners": "^0.15.0",
