--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,5 @@ DB_PASSWORD = "RfC4880shS4erH9E"
 SESSION_SECRET = "ulvi2002"
 MAIL_USER="agazadeulvi02@gmail.com"
 MAIL_PASS="fkwn bnqx idsp hnld"
+NODE_ENV="development"
+FE_BASE_URL="morent-rent-ulvi.vercel.app"
