fix: server deploy bugs fixed

--- a/server/.env
+++ b/server/.env
@@ -6,4 +6,4 @@ SESSION_SECRET = "ulvi2002"
 MAIL_USER="agazadeulvi02@gmail.com"
 MAIL_PASS="fkwn bnqx idsp hnld"
 NODE_ENV="development"
-FE_BASE_URL="morent-rent-ulvi.vercel.app"
+FE_BASE_URL="https://morent-rent-ulvi.vercel.app"
