feat: bugs fixed

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT="3000"
-BASE_URL="http://localhost:3000"
+BASE_URL="https://morent-rent-server.onrender.com"
 DB_USERNAME = "ulviea"
 DB_PASSWORD = "RfC4880shS4erH9E"
 SESSION_SECRET = "ulvi2002"
